Fix custom cursors displaying on mobile devices

--- a/src/components/Cursors/CustomCursor/customCursor.css
+++ b/src/components/Cursors/CustomCursor/customCursor.css
@@ -51,7 +51,7 @@
 }
 
 /* So cursor is not used on smaller devices */
-@media screen and (max-width: 500px){
+@media screen and (max-width: 1050px){
 
     .custom-cursor{
         display: none;
